# chemcrow-public

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Usage.py  app.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  webpage.py
.github/workflows/: build.yml  tests.yml
chemcrow/: __init__.py  chemcrow.py  general_tools.py  rdkit.py  search.py  utils.py  version.py
chemcrow/agents/: .#tool_list.py  __init__.py  chemcrow.py  dify_llm.py  prompts.py  tools.py
chemcrow/data/: chem_wep.csv  chem_wep_smi.csv
chemcrow/docker/: README.md
chemcrow/docker/aizynthfinder/: Dockerfile  app.py  config.yml
chemcrow/docker/aizynthfinder/files/: README.md
chemcrow/docker/molecular-transformer/: Dockerfile  app.py
chemcrow/docker/molecular-transformer/models/: README.md
chemcrow/frontend/: __init__.py  streamlit_callback_handler.py  utils.py
chemcrow/tools/: __init__.py  chemspace.py  converters.py  databases.py  hsp.py  mds.py  prompts.py  rdkit.py  reactions.py  rxn4chem.py  safety.py  search.py
chemcrow/tools/create/: data.csv
data/: chem_wep.csv
readme/: key_locations  versions
rmrkl/: __init__.py  agent.py  executor.py  output_parser.py  prompts.py
streamlit/: app.py
tests/: test_agent.py  test_agent_rmrkl.py  test_agent_using_realkey.py  test_converters.py  test_databases.py  test_rdkit.py  test_safety_tools.py  test_search.py
utils/: agent_prompts.py  agents.py
utils/tools/: chemspace.py  converters.py  make_llm.py  make_tools.py  prompts.py  rk.py  safety.py  search.py  utils.py
