[project]
name = "chemcrow"
dynamic = ["version"]
description = "Accurate solution of reasoning-intensive chemical tasks, powered by LLMs."
readme = "README.md"
authors = [
    { name = "Andres M Bran" },
    { name = "Sam Cox" },
    { name = "Andrew White" },
    { name = "Philippe Schwaller" },
]
maintainers = [
    { name = "Andrew White", email = "andrew.white@rochester.edu" }
]
requires-python = ">=3.9, <3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipython",
    "python-dotenv",
    "rdkit",
    "synspace",
    "openai==1.51.0",
    "molbloom",
    "paper-qa>=4.9.0",
    "google-search-results",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "nest_asyncio",
    "tiktoken",
    "streamlit",
    "rxn4chemistry",
    "duckduckgo-search",
    "wikipedia",
    "setuptools",
    "paper-scraper@git+https://github.com/blackadad/paper-scraper.git",
    "langchain-openai>=0.2.1",
    "langchain-community>=0.3.1",
    "langchain-anthropic>=0.2.1",
    "pydantic>=2.9.2",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
    "pytest>=8.3.4",
    "langchain-experimental>=0.3.3",
    "dify-client>=0.1.10",
]

[project.urls]
Homepage = "https://github.com/ur-whitelab/chemcrow-public"

[tool.setuptools.packages.find]
where = ["."]
include = ["rmrkl*", "chemcrow*"]

[tool.setuptools.package-data]
chemcrow = ["data/chem_wep_smi.csv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "chemcrow.version.__version__"}

[tool.rye]
managed = true
python_version = "3.11"


[tool.rye.scripts]
test = { cmd = "pytest tests/", env = { PYTHONPATH = "." } } 
